instruments/AIOUSB/Headers/AIOUSB.bas


Public Declare Function CTR_StartMeasuringPulseWidth Lib "AIOUSB" Alias "VBCTR_StartMeasuringPulseWidth" (ByVal DeviceIndex As Long) As Long
Public Declare Function CTR_StopMeasuringPulseWidth Lib "AIOUSB" Alias "VBCTR_StopMeasuringPulseWidth" (ByVal DeviceIndex As Long) As Long
Public Declare Function CTR_GetPulseWidthMeasurement Lib "AIOUSB" Alias "VBCTR_GetPulseWidthMeasurement" (ByVal DeviceIndex As Long, ByVal BlockIndex As Long, ByVal CounterIndex As Long, ByRef pReadValue As Integer) As Long



Public Declare Function DIO_Configure Lib "AIOUSB" Alias "VBDIO_Configure" (ByVal DeviceIndex As Long, ByVal Tristate As Boolean, ByRef OutMask As Any, ByRef Data As Any) As Long
Public Declare Function DIO_ConfigureEx Lib "AIOUSB" Alias "VBDIO_ConfigureEx" (ByVal DeviceIndex As Long, ByRef pOutMask As Any, ByRef pData As Any, ByRef pTristateMask As Any) As Long
Public Declare Function DIO_ConfigureMasked Lib "AIOUSB" Alias "VBDIO_ConfigureMasked" (ByVal DeviceIndex As Long, ByRef pOuts As Any, ByRef pOutsMask As Any, ByRef pData As Any, ByRef pDataMask As Any, ByRef pTristates As Any, ByRef pTristatesMask As Any) As Long
Public Declare Function DIO_ConfigurationQuery Lib "AIOUSB" Alias "VBDIO_ConfigurationQuery" (ByVal DeviceIndex As Long, ByRef pOutMask As Any, ByRef pTristateMask As Any) As Long

Public Declare Function DIO_Read1 Lib "AIOUSB" Alias "VBDIO_Read1" (ByVal DeviceIndex As Long, ByVal BitIndex As Long, ByRef Data As Byte) As Long
Public Declare Function DIO_Read8 Lib "AIOUSB" Alias "VBDIO_Read8" (ByVal DeviceIndex As Long, ByVal ByteIndex As Long, ByRef Data As Byte) As Long
Public Declare Function DIO_ReadAll Lib "AIOUSB" Alias "VBDIO_ReadAll" (ByVal DeviceIndex As Long, ByRef Data As Any) As Long

Public Declare Function DIO_Write1 Lib "AIOUSB" Alias "VBDIO_Write1" (ByVal DeviceIndex As Long, ByVal BitIndex As Long, ByVal Data As Boolean) As Long
Public Declare Function DIO_Write8 Lib "AIOUSB" Alias "VBDIO_Write8" (ByVal DeviceIndex As Long, ByVal ByteIndex As Long, ByVal Data As Byte) As Long
Public Declare Function DIO_WriteAll Lib "AIOUSB" Alias "VBDIO_WriteAll" (ByVal DeviceIndex As Long, ByRef Data As Any) As Long

Public Declare Function DIO_StreamOpen Lib "AIOUSB" Alias "VBDIO_StreamOpen" (ByVal DeviceIndex As Long, ByVal bIsRead As Long) As Long
Public Declare Function DIO_StreamClose Lib "AIOUSB" Alias "VBDIO_StreamClose" (ByVal DeviceIndex As Long) As Long
Public Declare Function DIO_StreamFrame Lib "AIOUSB" Alias "VBDIO_StreamFrame" (ByVal DeviceIndex As Long, ByVal FramePoints As Long, ByRef FrameData As Any, ByRef ByteTransferred As Long) As Long
Public Declare Function DIO_StreamSetClocks Lib "AIOUSB" Alias "VBDIO_StreamSetClocks" (ByVal DeviceIndex As Long, ByRef ReadClockHz As Double, ByRef WriteClockHz As Double) As Long

Public Declare Function DIO_SPI_Read Lib "AIOUSB" Alias "VBDIO_SPI_Read" (ByVal DeviceIndex As Long, ByVal Address, ByVal Reg As Byte, ByRef pValue As Byte) As Long
Public Declare Function DIO_SPI_Write Lib "AIOUSB" Alias "VBDIO_SPI_Write" (ByVal DeviceIndex As Long, ByVal Address, ByVal Reg As Byte, ByVal Value As Byte) As Long

Public Declare Function DIO_Automap_ClearTable Lib "AIOUSB" Alias "VBDIO_Automap_ClearTable" (ByVal DeviceIndex As Long) As Long
Public Declare Function DIO_Automap_SetTable Lib "AIOUSB" Alias "VBDIO_Automap_SetTable" (ByVal DeviceIndex As Long, ByRef pMapTable As Byte, ByRef pMapTableBytes As Long) As Long
Public Declare Function DIO_Automap_AddEntry Lib "AIOUSB" Alias "VBDIO_Automap_AddEntry" (ByVal DeviceIndex As Long, ByRef pMapEntry As Integer) As Long
Public Declare Function DIO_Automap_SetTickDivisor Lib "AIOUSB" Alias "VBDIO_Automap_SetTickDivisor" (ByVal DeviceIndex As Long, ByRef pDivisor As Byte) As Long

Public Declare Function DIO_PWM_Start Lib "AIOUSB" Alias "VBDIO_PWM_Start" (ByVal DeviceIndex As Long, ByRef pPWMTable As Byte, ByRef pPWMTableBytes As Long) As Long

Public Declare Function DIO_Latch_SetDivisor Lib "AIOUSB" Alias "VBDIO_Latch_SetDivisor" (ByVal DeviceIndex As Long, ByRef pDivisor As Byte) As Long
Public Declare Function DIO_Latch_Reset Lib "AIOUSB" Alias "VBDIO_Latch_Reset" (ByVal DeviceIndex As Long) As Long
Public Declare Function DIO_Latch_Read Lib "AIOUSB" Alias "VBDIO_Latch_Read" (ByVal DeviceIndex As Long, ByRef pLowLatches As Byte, ByRef pHighLatches As Byte, ByRef pNoLatches As Byte, ByRef pLatchesBytes As Long) As Long

Public Declare Function DIO_Deb_SetConfig Lib "AIOUSB" Alias "VBDIO_Deb_SetConfig" (ByVal DeviceIndex As Long, ByRef pDebTable As Byte, ByRef pDebTableBytes As Long) As Long
Public Declare Function DIO_Deb_ReadAll Lib "AIOUSB" Alias "VBDIO_Deb_ReadAll" (ByVal DeviceIndex As Long, ByRef pDebData As Byte) As Long

Public Declare Function DIO_CSA_DoSync Lib "AIOUSB" Alias "VBDIO_CSA_DoSync" (ByVal DeviceIndex As Long, ByRef BaseRateHz As Double, ByRef DurAms As Double, ByRef DurBms As Double, ByRef DurCms As Double) As Long
Public Declare Function DIO_CSA_DebounceSet Lib "AIOUSB" Alias "VBDIO_CSA_DebounceSet" (ByVal DeviceIndex As Long, ByVal DebounceCounts As Long) As Long
Public Declare Function DIO_CSA_DebounceReadAll Lib "AIOUSB" Alias "VBDIO_CSA_DebounceReadAll" (ByVal DeviceIndex As Long, ByRef pData As Any) As Long

Public Declare Function DAC_CSA_SetRangeLimits Lib "AIOUSB" Alias "DAC_CSA_SetRangeLimits" (ByVal DeviceIndex As Long, ByRef pData As Byte) As Long
Public Declare Function DAC_CSA_ClearRangeLimits Lib "AIOUSB" Alias "DAC_CSA_ClearRangeLimits" (ByVal DeviceIndex As Long) As Long

Public Declare Function DACDIO_WriteAll Lib "AIOUSB" Alias "DACDIO_WriteAll" (ByVal DeviceIndex As Long, ByRef pDACCounts As Integer, ByRef pDIOData As Byte) As Long



Public Declare Function DACDirect Lib "AIOUSB" Alias "VBDACDirect" (ByVal DeviceIndex As Long, ByVal Channel As Long, ByVal Counts As Integer) As Long
Public Declare Function DACMultiDirect Lib "AIOUSB" Alias "VBDACMultiDirect" (ByVal DeviceIndex As Long, ByRef pDACData As Any, ByVal DACDataCount As Long) As Long
Public Declare Function DACSetBoardRange Lib "AIOUSB" Alias "VBDACSetBoardRange" (ByVal DeviceIndex As Long, ByVal RangeCode As Long) As Long
Public Declare Function DACSetChannelCal Lib "AIOUSB" Alias "VBDACSetChannelCal" (ByVal DeviceIndex As Long, ByVal Channel As Long, ByVal CalFileName As String) As Long

Public Declare Function DACOutputProcess Lib "AIOUSB" Alias "VBDACOutputProcess" (ByVal DeviceIndex As Long, ByRef ClockHz As Double, ByVal NumSamples As Long, ByRef SampleData As Integer) As Long

Public Declare Function DACOutputOpen Lib "AIOUSB" Alias "VBDACOutputOpen" (ByVal DeviceIndex As Long, ByRef ClockHZ As Double) As Long
Public Declare Function DACOutputClose Lib "AIOUSB" Alias "VBDACOutputClose" (ByVal DeviceIndex As Long, ByVal bWait As Long) As Long
Public Declare Function DACOutputCloseNoEnd Lib "AIOUSB" Alias "VBDACOutputCloseNoEnd" (ByVal DeviceIndex As Long, ByVal bWait As Long) As Long
Public Declare Function DACOutputFrame Lib "AIOUSB" Alias "VBDACOutputFrame" (ByVal DeviceIndex As Long, ByVal FramePoints As Long, ByRef FrameData As Integer) As Long
Public Declare Function DACOutputFrameRaw Lib "AIOUSB" Alias "VBDACOutputFrameRaw" (ByVal DeviceIndex As Long, ByVal FramePoints As Long, ByRef FrameData As Integer) As Long
Public Declare Function DACOutputSetCount Lib "AIOUSB" Alias "VBDACOutputSetCount" (ByVal DeviceIndex As Long, ByVal NewCount As Long) As Long
Public Declare Function DACOutputSetInterlock Lib "AIOUSB" Alias "VBDACOutputSetInterlock" (ByVal DeviceIndex As Long, ByVal bInterlock As Long) As Long
Public Declare Function DACOutputSetClock Lib "AIOUSB" Alias "VBDACOutputSetClock" (ByVal DeviceIndex As Long, ByRef ClockHZ As Double) As Long
Public Declare Function DACOutputStart Lib "AIOUSB" Alias "VBDACOutputStart" (ByVal DeviceIndex As Long) As Long

'Note that all error codes returned are Windows error codes; they can be found in winerror.h in the Windows SDK, or on the Web.



Public Function ShiftRight(ByVal InitNum As Long, ByVal BitsRight As Long) As Long

    'Performs a bitwise right-shift. This is equivalent to C++'s >> operator.

    ShiftRight = InitNum \ (2 ^ BitsRight)

End Function

Public Function ShiftLeft(ByVal InitNum As Long, ByVal BitsLeft As Long) As Long

    'Performs a bitwise left-shift. This is equivalent to C++'s << operator.

    'C++:
    ' 1024 << 8 //Shift left 8 bits

    'VB:
    ' ShiftLeft(1024, 8) 'Shift left 8 bits

    ShiftLeft = CLng(InitNum * (2 ^ BitsLeft))

End Function
